<resources>
    <string name="app_name">agSenceApp</string>
    <string name="username_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="login_btn_text">Login</string>


    <string name="account_dashboard_title">AgSense - Account Name Dashboard</string>
    <string name="AdminNotification">Admin Notifications</string>

    <string name="accountSearchHint">Search account.....</string>
    <string name="searchDeviceHint">Search device...</string>

    <string name="faultyAccountsString">Faulty accounts</string>
    <string name="healthyAccountsString">Healthy accounts</string>
    <string name="faultyDevicesString">Faulty devices</string>
    <string name="healthyDevicesString">Healthy devices</string>
    <string name="healthCareReportsString">Healthcare reports</string>
    <string name="unreadNotificationsString">Unread notifications</string>
    <string name="devicesSettingsString">Device settings</string>
    <string name="otherString">Other</string>
    <string name="filterString">Filter</string>
    <string name="mapString">Map</string>
    <string name="deviceStatusTitle">Device status</string>

    <string name="accountstatus">Account Status</string>

    <string name="reset">Reset</string>

    <string name="filterDevices">Filter Devices</string>
    <string name="deviceType">Device Type</string>
    <string name="healthyOrFaultyDevices">Healthy / Faulty Devices</string>
    <string name="healthyDevices">Healthy Devices</string>
    <string name="faultyDevices">Faulty Devices</string>


    <string name="Filter">Filter</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>

    <string name="fromDate">From date</string>
    <string name="toDate">To date</string>
    <string name="search">Search</string>

    <string name="date">dd/mm/yyyy</string>

    <string name="display_faulty">Display faulty</string>
    <string name="display_healthy">Display Healthy</string>
    <string name="device_settings">Device Settings</string>
    <string name="HealthCareDashboard">Healthcare Dashboard</string>
    <string name="NewAccount">New Account</string>
    <string name="EditAccount">Edit Account</string>
    <string name="NewDevice">New Device</string>
    <string name="EditDevice">Edit Device</string>
    <string name="alertString">Speeding Alert and Geo-Fence</string>
    <string name="title_activity_maps">Map</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="fence_type">Fence Type</string>
    <string name="fence_radius_m">Fence Radius(m)</string>
    <string name="speed">Speed</string>
    <string name="speedalertgeosetting">speedAlertGeoSetting</string>
    <string name="authorizationsetting">authorizationSetting</string>
    <string name="authorization_number">Authorization Number</string>
    <string name="speeding_alert_and_geo_fence">Speeding Alert and Geo-Fence</string>
    <string name="admin_number">Admin Number</string>
    <string name="authorized_num_1">Authorized Num 1</string>
    <string name="authorized_num_2">Authorized Num 2</string>
    <string name="authorized_num_3">Authorized Num 3</string>
    <string name="update_btn_device_settings">Update</string>
    <string name="heading_dir_deg">Heading dir.(deg)</string>
    <string name="distance_m">Distance (m)</string>
    <string name="tracking_interval_2_s">Tracking interval 2 (s)</string>
    <string name="tracking_interval_1_s">Tracking interval 1 (s)</string>
    <string name="_numbersdevicesettings">0-65535</string>
    <string name="devicesettingsspeed">0-255 km/h</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="device_settings_degree">0-359</string>
    <string name="longitudelimit">000-0000-000 - 999-9999-999</string>
    <string name="latitudelimit">00.000000 - 99.999999</string>
    <string name="devicesettingslimit">000.0000000 - 999.999999</string>
    <string name="settings">Settings</string>
    <string name="device_view_properties">Properties</string>
    <string name="device_view_connected_to">Connected To</string>
    <string name="device_view_battery_status">Battery Status</string>
    <string name="device_view_analog_1">Analog 1</string>
    <string name="device_view_analog2">Analog 2</string>
    <string name="device_view_dialog_1">Dialog 1</string>
    <string name="status_list">Status List</string>
    <string name="device_view_other_info">Other\nInfo</string>
    <string name="device_view_time_elapsed">Time\nElapsed</string>
    <string name="device_view_update_time">Update\nTime</string>


    <string name="send_msg_again">Please send the message again</string>
    <string name="error_send_msg">Error sending message!</string>
    <string name="msg_sent">message sent</string>


</resources>