<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SpeedingAlertAndGeoFenceSetting">

    <include
        layout="@layout/activity_back_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp">


            <TextView
                android:id="@+id/alertSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/alertString"
                android:textColor="@color/orange"
                android:textSize="@dimen/medium_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/gradient_color_background" />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/small_text_size"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <EditText
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:ems="16"
                android:hint="@string/devicesettingslimit"
                android:inputType="numberDecimal"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/small_text_size"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <EditText
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"

                android:ems="16"
                android:hint="@string/latitudelimit"
                android:inputType="number"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/small_text_size"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <EditText
                android:id="@+id/speednumbertextbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:ems="16"
                android:hint="@string/devicesettingsspeed"
                android:inputType="number"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/small_text_size"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fence_radius_m" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4.4" />

            <EditText
                android:id="@+id/fenceradiustextnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:ems="16"
                android:hint="@string/_numbersdevicesettings"
                android:inputType="number"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/small_text_size"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fence_type" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.38" />

            <Spinner
                android:id="@+id/FenceTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

        </LinearLayout>

        <Button
            android:id="@+id/speedAlertGeoSettingbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient_color_background"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:onClick="SpeedingAlertUpdate"
            android:text="@string/update_btn_device_settings" />
            android:text="@string/update_btn_device_settings" />
    </LinearLayout>

    <Button
        android:id="@+id/set_by_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openMap"
        android:text="set by map"></Button>


</LinearLayout>