<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DeviceSetting">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:gravity="center">

        <include
            android:id="@+id/included"
            layout="@layout/activity_back_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        >
        <LinearLayout
            android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/rounded_white_background_frame"
        >

        <TextView
            android:id="@+id/alertSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertString"
            android:textAllCaps="false"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView

                android:id="@+id/authorizationNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/authorization_number"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1.25"
                    android:text="@string/admin_number" />

                <EditText
                    android:id="@+id/editAdminNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:ems="16"
                    android:textSize="10sp"
                    android:inputType="phone"


                    tools:ignore="SmallSp,TextFields" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/authorized_num_1" />

                <EditText
                    android:id="@+id/editauthorizednum1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:ems="16"


                    android:inputType="phone"

                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextFields"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/authorized_num_2" />

                <EditText
                    android:id="@+id/editauthorizednum2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:ems="16"

                    android:inputType="phone"

                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextFields"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/authorized_num_3" />

                <EditText
                    android:id="@+id/editauthorizednum3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:ems="16"
                    android:inputType="phone"

                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextFields"/>
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_white_background_frame"
                android:text="@string/update_btn_device_settings"
                android:onClick="AuthorizationNumberUpdate"/>



        </LinearLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/rounded_white_background_frame"
        >

        <TextView
            android:id="@+id/authorizationSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="authorizationSetting"
            android:textAllCaps="false"/>


            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_white_background_frame"

            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/speeding_alert_and_geo_fence"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/tracking_interval_1_s" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />
                <EditText
                    android:id="@+id/trackingintervale1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"

                    android:ems="16"
                    android:textSize="10sp"
                    android:hint="@string/_numbersdevicesettings"
                    android:inputType="number"


                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/tracking_interval_2_s" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />
                <EditText
                    android:id="@+id/trackingintervale2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:ems="16"
                    android:textSize="10sp"
                    android:hint="@string/_numbersdevicesettings"
                    android:inputType="number"


                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/distance_m" />


    </LinearLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/rounded_white_background_frame"
        >


            <Button
                android:id="@+id/SpeedingAlertUpdateBtn"
                android:layout_width="wrap_content"
                android:onClick="SpeedingAlertUSecondUpdate"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_white_background_frame"
                android:text="@string/update_btn_device_settings" />

        <TextView
            android:id="@+id/speedAlertGeoSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="speedAlertGeoSetting"
            android:textAllCaps="false"/>



    </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>