<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/agsense_logo"
            android:scaleType="centerInside">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/user_orange_icon" />


                <EditText
                    android:id="@+id/usernameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:hint="@string/username_hint"
                    android:textStyle="italic"
                    android:textSize="@dimen/small_text_size"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/gradient_color_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/password_orange_icon" />

                <EditText
                    android:id="@+id/passTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/pass_hint"
                    android:textStyle="italic"
                    android:textSize="@dimen/small_text_size"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/gradient_color_background" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@null"
                android:text="Forget password?"
                android:textSize="@dimen/small_text_size"
                android:textAllCaps="false"
                android:textColor="@color/orange"
                android:alpha="0.5"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@null"
                android:text="@string/login_btn_text"
                android:textAllCaps="false"
                android:textSize="@dimen/large_text_size"
                android:textColor="@color/orange"
                android:onClick="login"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/gradient_color_background" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>